# viewer.brickschema.org

./: .gitignore  Cargo.toml  Makefile  package-lock.json
.github/: build.yml
src/: lib.rs
www/: Brick.ttl  index.html  index.js  package-lock.json  package.json  site.css
